loggerapp/datalogger/driver/vrmagic/vrmusbcam2.h


// ------------------------------------------------------------------------
/// @defgroup Types                                             Basic Types
// ------------------------------------------------------------------------
/// @{

typedef unsigned char VRmBYTE;

typedef unsigned short int VRmWORD;

typedef unsigned int VRmBOOL;


/// @}
// ------------------------------------------------------------------------
/// @defgroup General                   Error Handling / General Management
// ------------------------------------------------------------------------
/// @{

/// return value values of API function calls
typedef VRM_ENUM _VRmRetVal
{
	/// return value for failed function call
	VRM_FAILED=0,
	/// return value for successful function call
	VRM_SUCCESS=1
} VRmRetVal;
typedef struct VRmUsbCamDeviceInternal* VRmUsbCamDevice;