loggerapp/datalogger/driver/vrmagic/vrmusbcam2l.h



// ------------------------------------------------------------------------
// Configuration Settings
// ------------------------------------------------------------------------

typedef VRM_ENUM _VRmFeatures
{
	VRM_SETTINGS1_SUPPORTED=1<<0,
	VRM_SETTINGS2_SUPPORTED=1<<1,
	VRM_SETTINGS3_SUPPORTED=1<<2,
	VRM_SETTINGS4_SUPPORTED=1<<3,
	VRM_SETTINGS5_SUPPORTED=1<<4,
	VRM_SETTINGS6_SUPPORTED=1<<5,
	VRM_SETTINGS7_SUPPORTED=1<<6,
	VRM_SETTINGS8_SUPPORTED=1<<7,
	VRM_SETTINGS9_SUPPORTED=1<<8,
	VRM_EXT_TRIGGER_SUPPORTED=1<<16,
	VRM_SOFT_TRIGGER_SUPPORTED=1<<17,
}VRmFeatures;


/// Check which features are supported,
/// fp_supported is a bitmask of VRmFeatures enums
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetFeatures(VRmUsbCamDevice f_device,int* fp_features);


/// Sensor Settings for VRmC-3, VRmC-4pro
typedef VRM_STRUCT _VRmSettings1
{
	/// [0,m_sensor_width-m_roi_width]
	VRmWORD m_roi_left;
	/// [0,m_sensor_height-m_roi_height]
	VRmWORD m_roi_top;
	/// [2,m_sensor_width], don't change while grabber is running
	VRmWORD m_roi_width;
	/// [2,m_sensor_height], don't change while grabber is running
	VRmWORD m_roi_height;
	/// READ-ONLY
	VRmWORD m_sensor_width;
	/// READ-ONLY
	VRmWORD m_sensor_height;
	/// [0.0;2000.0], exposure time of the camera in milliseconds.
	double m_exposure_time_ms;
	/// [5.0;15.0], set the pixel clock in MHz
	double m_pixel_clock_mhz;
	/// [0;63], red gain, 0=highest possible gain
	VRmBYTE m_red_gain;
	/// [0;63], green gain, 0=highest possible gain, also used as gray gain on /BW cameras
	VRmBYTE m_green_gain;
	/// [0;63], blue gain, 0=highest possible gain
	VRmBYTE m_blue_gain;
	/// [0;63] reset Level Voltage of the Camera
	VRmBYTE m_reset_level;
	/// [0;7] Pixel Bias Voltage Control of the Camera
	VRmBYTE m_pixel_bias_voltage;
	// NOTE: vBlank may be changed using VRmSettings7. For backwards compatibility, it is not 
	// included here.
}VRmSettings1;


VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetSettings1(VRmUsbCamDevice f_device,const VRmSettings1* fcp_settings);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSettings1(VRmUsbCamDevice f_device,VRmSettings1* fp_settings);


/// Illumination Settings for VRmC-3i
typedef VRM_STRUCT _VRmSettings2
{
	/// [0.0;1.0], Illumination 
	double m_illumination_intensity;
}VRmSettings2;


VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetSettings2(VRmUsbCamDevice f_device,const VRmSettings2* fcp_settings);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSettings2(VRmUsbCamDevice f_device,VRmSettings2* fp_settings);


/// Filter Settings for VRmC-3, VRmC-4pro, VRmC-6pro and VRmC-8pro

/// These Filter Settings get applied during VRmUsbCamConvertImage,
/// if you only use VRmUsbCamLockNextImage these settings are IGNORED
typedef VRM_STRUCT _VRmSettings3
{
	/// [0.0;10.0], neutral: 1.0
	float m_gamma;
	/// [-255,255], neutral: 0
	short m_luminance;
	/// [0.0;10.0], neutral: 1.0
	float m_contrast;
}VRmSettings3;


VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetSettings3(VRmUsbCamDevice f_device,const VRmSettings3* fcp_settings);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSettings3(VRmUsbCamDevice f_device,VRmSettings3* fp_settings);


typedef VRM_ENUM _VRmAVCInput
{ 
	VRM_SVIDEO,
	VRM_COMPOSITE,
	VRM_YC
}VRmAVCInput;


/// Signal Settings for VRmAVC-1
typedef VRM_STRUCT _VRmSettings4
{
	/// [0,255], luminance brightness, default: 128
	VRmBYTE m_luminance_brightness;
	/// [0,127], luminance contrast, default: 64
	VRmBYTE m_luminance_contrast;
	/// [0,127], chrominance saturation, default: 64
	VRmBYTE m_chrominance_saturation;
	/// [-128,127], chrominance hue, default: 0
	char m_chrominance_hue;
	/// [VRM_SVIDEO,VRM_COMPOSITE,VRM_YC], input format, default: SVIDEO
	VRmAVCInput m_format;
}VRmSettings4;


VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetSettings4(VRmUsbCamDevice f_device,const VRmSettings4* fcp_settings);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSettings4(VRmUsbCamDevice f_device,VRmSettings4* fp_settings);


/// Sensor Settings for VRmC-6pro
typedef VRM_STRUCT _VRmSettings5
{
	/// [0,m_sensor_width-m_roi_width]
	VRmWORD m_roi_left;
	/// [0,m_sensor_height-m_roi_height]
	VRmWORD m_roi_top;
	/// [2,m_sensor_width], don't change while grabber is running
	VRmWORD m_roi_width;
	/// [2,m_sensor_height], don't change while grabber is running
	VRmWORD m_roi_height;
	/// [1,255], vertical blanking (unit: lines). ATTENTION: low values will not 
	/// work with "single internal" or "multiple internal" driver queuing mode.
	/// see VRmagic USB Driver tool.
	VRmBYTE m_vblank_lines;
	/// READ-ONLY
	VRmWORD m_sensor_width;
	/// READ-ONLY
	VRmWORD m_sensor_height;
	/// [0.0;2000.0], exposure time of the camera in milliseconds.
	double m_exposure_time_ms;
	/// [5.0;43.0], set the pixel clock in MHz
	double m_pixel_clock_mhz;
	/// adapt readout time to exposure time. if enabled, m_pixel_clock_mhz 
	/// is ignored and the pixel clock is set to an optimal value, depending
	/// on the exposure time.
	VRmBOOL m_adapt_readout_to_exposure;
	/// [1;18], red gain, 18=highest possible gain
	VRmBYTE m_red_gain;
	/// [1;18], green gain, 18=highest possible gain
	VRmBYTE m_green_gain;
	/// [1;18], blue gain, 18=highest possible gain
	VRmBYTE m_blue_gain;
	/// [0.0;2.0], VrstLow voltage, adjusts blooming artefacts
	double m_vrst_low_voltage;
} VRmSettings5;


VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetSettings5(VRmUsbCamDevice f_device,const VRmSettings5* fcp_settings);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSettings5(VRmUsbCamDevice f_device,VRmSettings5* fp_settings);


typedef VRM_ENUM _VRmTriggerPolarity
{
	VRM_TRIGGERPOLARITY_POS_EDGE=0,
	VRM_TRIGGERPOLARITY_NEG_EDGE=1,
	VRM_TRIGGERPOLARITY_POS_LEVEL=2,
	VRM_TRIGGERPOLARITY_NEG_LEVEL=3
} VRmTriggerPolarity;


/// External Trigger Settings for VRmC-4pro v2, VRmC-6pro and VRmC-8pro

/// Use VRmUsbCamSetTriggerMode() to enable external trigger,
/// and VRmUsbCamReadTriggerStats to analyse trigger statistics.
typedef VRM_STRUCT _VRmSettings6
{
	/// polarity of external trigger input
	VRmTriggerPolarity m_polarity;
	/// trigger delay (in ms), range [0;1000.0] (edge modes)
	double m_delay_ms;
} VRmSettings6;


VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetSettings6(VRmUsbCamDevice f_device,const VRmSettings6* fcp_settings);

VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSettings6(VRmUsbCamDevice f_device,VRmSettings6* fp_settings);


/// Additional Sensor Settings for VRmC-3(i) and VRmC-4pro

/// For backwards-compatibility, these settings are not included
/// in VRmSettings1.
typedef VRM_STRUCT _VRmSettings7
{
	/// vertical blanking (unit: lines). ATTENTION: low values may not 
	/// work with "single internal" or "multiple internal" driver queuing mode.
	/// see VRmagic USB Driver tool. range [1;80]
	VRmBYTE	m_vblank_lines;
} VRmSettings7;