loggerapp/datalogger/driver/vrmagic/vrmusbcamapi.py


# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS1_SUPPORTED = (1 << 0)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS2_SUPPORTED = (1 << 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS3_SUPPORTED = (1 << 2)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS4_SUPPORTED = (1 << 3)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS5_SUPPORTED = (1 << 4)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS6_SUPPORTED = (1 << 5)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS7_SUPPORTED = (1 << 6)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS8_SUPPORTED = (1 << 7)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SETTINGS9_SUPPORTED = (1 << 8)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_EXT_TRIGGER_SUPPORTED = (1 << 16)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRM_SOFT_TRIGGER_SUPPORTED = (1 << 17)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
VRmFeatures = enum__VRmFeatures

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 219
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetFeatures'):
    VRmUsbCamGetFeatures = _libs['libvrmusbcam2.so'].VRmUsbCamGetFeatures
    VRmUsbCamGetFeatures.argtypes = [VRmUsbCamDevice, POINTER(c_int)]
    VRmUsbCamGetFeatures.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 252


class struct__VRmSettings1(Structure):
    pass


struct__VRmSettings1.__slots__ = [
    'm_roi_left',
    'm_roi_top',
    'm_roi_width',
    'm_roi_height',
    'm_sensor_width',
    'm_sensor_height',
    'm_exposure_time_ms',
    'm_pixel_clock_mhz',
    'm_red_gain',
    'm_green_gain',
    'm_blue_gain',
    'm_reset_level',
    'm_pixel_bias_voltage',
]
struct__VRmSettings1._fields_ = [
    ('m_roi_left', VRmWORD),
    ('m_roi_top', VRmWORD),
    ('m_roi_width', VRmWORD),
    ('m_roi_height', VRmWORD),
    ('m_sensor_width', VRmWORD),
    ('m_sensor_height', VRmWORD),
    ('m_exposure_time_ms', c_double),
    ('m_pixel_clock_mhz', c_double),
    ('m_red_gain', VRmBYTE),
    ('m_green_gain', VRmBYTE),
    ('m_blue_gain', VRmBYTE),
    ('m_reset_level', VRmBYTE),
    ('m_pixel_bias_voltage', VRmBYTE),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 252
VRmSettings1 = struct__VRmSettings1

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 254
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetSettings1'):
    VRmUsbCamSetSettings1 = _libs['libvrmusbcam2.so'].VRmUsbCamSetSettings1
    VRmUsbCamSetSettings1.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings1)]
    VRmUsbCamSetSettings1.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 255
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSettings1'):
    VRmUsbCamGetSettings1 = _libs['libvrmusbcam2.so'].VRmUsbCamGetSettings1
    VRmUsbCamGetSettings1.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings1)]
    VRmUsbCamGetSettings1.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 262


class struct__VRmSettings2(Structure):
    pass


struct__VRmSettings2.__slots__ = ['m_illumination_intensity', ]
struct__VRmSettings2._fields_ = [('m_illumination_intensity', c_double), ]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 262
VRmSettings2 = struct__VRmSettings2

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 264
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetSettings2'):
    VRmUsbCamSetSettings2 = _libs['libvrmusbcam2.so'].VRmUsbCamSetSettings2
    VRmUsbCamSetSettings2.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings2)]
    VRmUsbCamSetSettings2.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 265
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSettings2'):
    VRmUsbCamGetSettings2 = _libs['libvrmusbcam2.so'].VRmUsbCamGetSettings2
    VRmUsbCamGetSettings2.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings2)]
    VRmUsbCamGetSettings2.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 279


class struct__VRmSettings3(Structure):
    pass


struct__VRmSettings3.__slots__ = [
    'm_gamma',
    'm_luminance',
    'm_contrast',
]
struct__VRmSettings3._fields_ = [
    ('m_gamma', c_float),
    ('m_luminance', c_short),
    ('m_contrast', c_float),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 279
VRmSettings3 = struct__VRmSettings3

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 281
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetSettings3'):
    VRmUsbCamSetSettings3 = _libs['libvrmusbcam2.so'].VRmUsbCamSetSettings3
    VRmUsbCamSetSettings3.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings3)]
    VRmUsbCamSetSettings3.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 282
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSettings3'):
    VRmUsbCamGetSettings3 = _libs['libvrmusbcam2.so'].VRmUsbCamGetSettings3
    VRmUsbCamGetSettings3.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings3)]
    VRmUsbCamGetSettings3.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 289
enum__VRmAVCInput = c_int

VRM_SVIDEO = 0  # /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 289

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 289
VRM_COMPOSITE = (VRM_SVIDEO + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 289
VRM_YC = (VRM_COMPOSITE + 1)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 289
VRmAVCInput = enum__VRmAVCInput

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 304


class struct__VRmSettings4(Structure):
    pass


struct__VRmSettings4.__slots__ = [
    'm_luminance_brightness',
    'm_luminance_contrast',
    'm_chrominance_saturation',
    'm_chrominance_hue',
    'm_format',
]
struct__VRmSettings4._fields_ = [
    ('m_luminance_brightness', VRmBYTE),
    ('m_luminance_contrast', VRmBYTE),
    ('m_chrominance_saturation', VRmBYTE),
    ('m_chrominance_hue', c_char),
    ('m_format', VRmAVCInput),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 304
VRmSettings4 = struct__VRmSettings4

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 306
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetSettings4'):
    VRmUsbCamSetSettings4 = _libs['libvrmusbcam2.so'].VRmUsbCamSetSettings4
    VRmUsbCamSetSettings4.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings4)]
    VRmUsbCamSetSettings4.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 307
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSettings4'):
    VRmUsbCamGetSettings4 = _libs['libvrmusbcam2.so'].VRmUsbCamGetSettings4
    VRmUsbCamGetSettings4.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings4)]
    VRmUsbCamGetSettings4.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 344


class struct__VRmSettings5(Structure):
    pass


struct__VRmSettings5.__slots__ = [
    'm_roi_left',
    'm_roi_top',
    'm_roi_width',
    'm_roi_height',
    'm_vblank_lines',
    'm_sensor_width',
    'm_sensor_height',
    'm_exposure_time_ms',
    'm_pixel_clock_mhz',
    'm_adapt_readout_to_exposure',
    'm_red_gain',
    'm_green_gain',
    'm_blue_gain',
    'm_vrst_low_voltage',
]
struct__VRmSettings5._fields_ = [
    ('m_roi_left', VRmWORD),
    ('m_roi_top', VRmWORD),
    ('m_roi_width', VRmWORD),
    ('m_roi_height', VRmWORD),
    ('m_vblank_lines', VRmBYTE),
    ('m_sensor_width', VRmWORD),
    ('m_sensor_height', VRmWORD),
    ('m_exposure_time_ms', c_double),
    ('m_pixel_clock_mhz', c_double),
    ('m_adapt_readout_to_exposure', VRmBOOL),
    ('m_red_gain', VRmBYTE),
    ('m_green_gain', VRmBYTE),
    ('m_blue_gain', VRmBYTE),
    ('m_vrst_low_voltage', c_double),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 344
VRmSettings5 = struct__VRmSettings5

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 346
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetSettings5'):
    VRmUsbCamSetSettings5 = _libs['libvrmusbcam2.so'].VRmUsbCamSetSettings5
    VRmUsbCamSetSettings5.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings5)]
    VRmUsbCamSetSettings5.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 347
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSettings5'):
    VRmUsbCamGetSettings5 = _libs['libvrmusbcam2.so'].VRmUsbCamGetSettings5
    VRmUsbCamGetSettings5.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings5)]
    VRmUsbCamGetSettings5.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 355
enum__VRmTriggerPolarity = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 355
VRM_TRIGGERPOLARITY_POS_EDGE = 0

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 355
VRM_TRIGGERPOLARITY_NEG_EDGE = 1

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 355
VRM_TRIGGERPOLARITY_POS_LEVEL = 2

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 355
VRM_TRIGGERPOLARITY_NEG_LEVEL = 3

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 355
VRmTriggerPolarity = enum__VRmTriggerPolarity

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 367


class struct__VRmSettings6(Structure):
    pass


struct__VRmSettings6.__slots__ = [
    'm_polarity',
    'm_delay_ms',
]
struct__VRmSettings6._fields_ = [
    ('m_polarity', VRmTriggerPolarity),
    ('m_delay_ms', c_double),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 367
VRmSettings6 = struct__VRmSettings6

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 369
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetSettings6'):
    VRmUsbCamSetSettings6 = _libs['libvrmusbcam2.so'].VRmUsbCamSetSettings6
    VRmUsbCamSetSettings6.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings6)]
    VRmUsbCamSetSettings6.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 370
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSettings6'):
    VRmUsbCamGetSettings6 = _libs['libvrmusbcam2.so'].VRmUsbCamGetSettings6
    VRmUsbCamGetSettings6.argtypes = [VRmUsbCamDevice, POINTER(VRmSettings6)]
    VRmUsbCamGetSettings6.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 382


class struct__VRmSettings7(Structure):
    pass


struct__VRmSettings7.__slots__ = ['m_vblank_lines', ]
struct__VRmSettings7._fields_ = [('m_vblank_lines', VRmBYTE), ]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 382
VRmSettings7 = struct__VRmSettings7
